@@ -113,6 +113,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1312627_EL.info \
   ATLAS_2014_I1312627_MU.info \
   ATLAS_2014_I1306615.info \
+  ATLAS_2013_I1216670.info \
   BABAR_2003_I593379.info \
   BABAR_2005_S6181155.info \
   BABAR_2007_S6895344.info \
