@@ -1,0 +1,20 @@
+# BEGIN PLOT /ATLAS_2013_I1216670/d..-x..-y..
+LogY=0
+XTwosidedTicks=1
+YTwosidedTicks=1
+LeftMargin=1.8
+YLabelSep=7.5
+ErrorBars=1
+Title=bare leptons
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2013_I1216670/d01
+XLabel=$\Delta_\text{jets}^\text{n}$ [GeV]
+YLabel=$\dfrac{1}{\sigma} \dfrac{\text{d}\sigma}{\text{d}\Delta_\text{jets}^\text{n}}$ $\left[\dfrac{1}{\text{0.03}}\right]$
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2013_I1216670/d02
+XLabel=$\Delta_\text{jets}$ [GeV]
+YLabel=$\dfrac{1}{\sigma} \dfrac{\text{d}\sigma}{\text{d}\Delta_\text{jets}}$ $\left[\dfrac{1}{\text{3~GeV}}\right]$
+# END PLOT
+
