@@ -109,6 +109,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1312627_EL.plot \
   ATLAS_2014_I1312627_MU.plot \
   ATLAS_2014_I1306615.plot \
+  ATLAS_2013_I1216670.plot \
   BABAR_2003_I593379.plot \
   BABAR_2005_S6181155.plot \
   BABAR_2007_S6895344.plot \
