@@ -1,0 +1,93 @@
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2013_I1216670/d01-x01-y01
+Path=/REF/ATLAS_2013_I1216670/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.0165	0.0165	0.0165			0.00556	0.00125	0.00125
+0.05	0.017	0.017			0.017	0.0025	0.0025
+0.0835	0.0165	0.0165			0.0251	0.0031	0.0031
+0.1165	0.0165	0.0165			0.0317	0.0023	0.0023
+0.15	0.016999999999999987	0.017000000000000015			0.0347	0.0028	0.0028
+0.1835	0.016499999999999987	0.016500000000000015			0.0383	0.0025	0.0025
+0.2165	0.016499999999999987	0.016500000000000015			0.0422	0.0028	0.0028
+0.25	0.016999999999999987	0.017000000000000015			0.0439	0.0034	0.0034
+0.2835	0.01649999999999996	0.016500000000000015			0.0445	0.0034	0.0034
+0.3165	0.016500000000000015	0.016500000000000015			0.0445	0.004	0.004
+0.35	0.01699999999999996	0.017000000000000015			0.0441	0.0031	0.0031
+0.3835	0.016500000000000015	0.016500000000000015			0.0424	0.0034	0.0034
+0.4165	0.01649999999999996	0.016500000000000015			0.0406	0.0031	0.0031
+0.45	0.017000000000000015	0.017000000000000015			0.0395	0.0031	0.0031
+0.4835	0.01649999999999996	0.016500000000000015			0.0384	0.0029	0.0029
+0.5165	0.01649999999999996	0.01650000000000007			0.0352	0.0023	0.0023
+0.55	0.017000000000000015	0.016999999999999904			0.0327	0.0042	0.0042
+0.5835	0.01650000000000007	0.01649999999999996			0.0298	0.002	0.002
+0.6165	0.01650000000000007	0.01649999999999996			0.0262	0.0027	0.0027
+0.65	0.017000000000000015	0.017000000000000015			0.0247	0.0029	0.0029
+0.6835	0.01649999999999996	0.01649999999999996			0.0223	0.0031	0.0031
+0.7165	0.01650000000000007	0.01649999999999996			0.0225	0.002	0.002
+0.75	0.017000000000000015	0.017000000000000015			0.0239	0.0022	0.0022
+0.7835	0.01649999999999996	0.01650000000000007			0.0233	0.0036	0.0036
+0.8165	0.01649999999999996	0.01649999999999996			0.0203	0.0033	0.0033
+0.85	0.017000000000000015	0.017000000000000015			0.0197	0.003	0.003
+0.8835	0.01649999999999996	0.01650000000000007			0.0226	0.0032	0.0032
+0.9165	0.01649999999999996	0.01650000000000007			0.0307	0.0043	0.0043
+0.95	0.016999999999999904	0.017000000000000015			0.0441	0.0076	0.0076
+0.9835	0.01650000000000007	0.01649999999999996			0.0892	0.017	0.017
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2013_I1216670/d02-x01-y01
+Path=/REF/ATLAS_2013_I1216670/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.5	1.5	1.5			0.0121	0.0024	0.0024
+4.5	1.5	1.5			0.0303	0.0018	0.0018
+7.5	1.5	1.5			0.04	0.0029	0.0029
+10.5	1.5	1.5			0.0455	0.0038	0.0038
+13.5	1.5	1.5			0.049	0.0021	0.0021
+16.5	1.5	1.5			0.051	0.0037	0.0037
+19.5	1.5	1.5			0.0507	0.0027	0.0027
+22.5	1.5	1.5			0.052	0.0036	0.0036
+25.5	1.5	1.5			0.049	0.0027	0.0027
+28.5	1.5	1.5			0.0459	0.0025	0.0025
+31.5	1.5	1.5			0.0429	0.0019	0.0019
+34.5	1.5	1.5			0.0406	0.004	0.004
+37.5	1.5	1.5			0.0399	0.0043	0.0043
+40.5	1.5	1.5			0.0412	0.0029	0.0029
+43.5	1.5	1.5			0.0422	0.0028	0.0028
+46.5	1.5	1.5			0.0395	0.0026	0.0026
+49.5	1.5	1.5			0.0356	0.0031	0.0031
+52.5	1.5	1.5			0.032	0.0041	0.0041
+55.5	1.5	1.5			0.0286	0.0029	0.0029
+58.5	1.5	1.5			0.0256	0.0021	0.0021
+61.5	1.5	1.5			0.0229	0.0034	0.0034
+64.5	1.5	1.5			0.0208	0.0013	0.0013
+67.5	1.5	1.5			0.0177	0.0021	0.0021
+70.5	1.5	1.5			0.0163	0.0015	0.0015
+73.5	1.5	1.5			0.0138	0.0015	0.0015
+76.5	1.5	1.5			0.012	0.0017	0.0017
+79.5	1.5	1.5			0.0102	0.0012	0.0012
+82.5	1.5	1.5			0.00907	0.00118	0.00118
+85.5	1.5	1.5			0.00799	0.00104	0.00104
+88.5	1.5	1.5			0.00729	8.9E-4	8.9E-4
+91.5	1.5	1.5			0.00667	9.2E-4	9.2E-4
+94.5	1.5	1.5			0.00585	8.4E-4	8.4E-4
+97.5	1.5	1.5			0.00546	8.5E-4	8.5E-4
+100.5	1.5	1.5			0.00522	7.9E-4	7.9E-4
+103.5	1.5	1.5			0.00469	0.0012	0.0012
+106.5	1.5	1.5			0.00434	7.6E-4	7.6E-4
+109.5	1.5	1.5			0.00403	0.00115	0.00115
+112.5	1.5	1.5			0.00372	7.3E-4	7.3E-4
+115.5	1.5	1.5			0.00337	7.3E-4	7.3E-4
+118.5	1.5	1.5			0.00308	0.00107	0.00107
+121.5	1.5	1.5			0.00293	0.00108	0.00108
+124.5	1.5	1.5			0.00277	7.2E-4	7.2E-4
+127.5	1.5	1.5			0.00222	7.6E-4	7.6E-4
+130.5	1.5	1.5			0.00233	7.9E-4	7.9E-4
+133.5	1.5	1.5			0.00194	7.5E-4	7.5E-4
+136.5	1.5	1.5			0.00178	7.6E-4	7.6E-4
+139.5	1.5	1.5			0.00172	7.7E-4	7.7E-4
+142.5	1.5	1.5			0.00172	8.0E-4	8.0E-4
+145.5	1.5	1.5			0.00165	7.8E-4	7.8E-4
+148.5	1.5	1.5			0.00132	7.7E-4	7.7E-4
+# END YODA_SCATTER2D 
+
