@@ -91,6 +91,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1312627_EL.yoda \
   ATLAS_2014_I1312627_MU.yoda \
   ATLAS_2014_I1306615.yoda \
+  ATLAS_2013_I1216670.yoda \
   BABAR_2003_I593379.yoda \
   BABAR_2005_S6181155.yoda \
   BABAR_2006_S6511112.yoda \
