@@ -119,7 +119,8 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2014_I1312627.cc \
 	ATLAS_2013_I1217863_W.cc \
 	ATLAS_2013_I1217863_Z.cc \
-    ATLAS_2014_I1306615.cc
+    ATLAS_2014_I1306615.cc \
+    ATLAS_2013_I1216670.cc
 if ENABLE_PRELIMINARY
 RivetATLASAnalyses_la_SOURCES += \
     ATLAS_2012_CONF_2012_001.cc
