@@ -1,3 +1,7 @@
+2015-03-25  Holger Schulz  <holger.schulz@durham.ac.uk>
+
+	* Add ATLAS double parton scattering in W+2j analysis (ATLAS_2013_I1216670).
+
 2015-03-24  Andy Buckley  <andy.buckley@cern.ch>
 
 	* 2.2.1 release!
